fluxcd/apps/overlays/production/kai-hamilton-site/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kai-hamilton-site
spec:
  template:
    metadata:
      labels:
        policy.prplanit.com/ingress: "true"
    spec:
      imagePullSecrets:
        - name: cr-pcfae-admin-pull-secret
      containers:
        - name: kai-hamilton-site
          image: cr.pcfae.com/sofmeright/kai-hamilton.com:v0.0.3
