fluxcd/apps/overlays/production/kai-hamilton-site/service-kai-hamilton-site-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: kai-hamilton-site
  labels:
    policy.prplanit.com/ingress: "true"
