fluxcd/apps/overlays/production/kai-hamilton-site/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kai-hamilton-site
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Discovery & Dashboards (Lost Woods🌲)"
spec:
  parentRefs:
    - name: cell-membrane-gateway
      namespace: prelude-of-light
  hostnames:
    - "kai-hamilton.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kai-hamilton-site
          port: 4019
